--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.90.10",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.22.0",
+    "recharts": "^3.4.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
