--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-SQLAlchemy==2.0.19
-pydantic==1.10.12
-httpx==0.24.1
-alembic==1.11.1
-python-dotenv==1.0.0
-pytest==7.4.0
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+SQLAlchemy==2.0.36
+pydantic==2.9.2
+pydantic-settings==2.5.2
+httpx==0.27.2
+alembic==1.13.2
+python-dotenv==1.0.1
+pytest==8.3.3
+psycopg2-binary==2.9.10
