feat: PostgreSQL integration, database seeding, and frontend fixes
- Migrated from SQLite to PostgreSQL with connection pooling
- Added comprehensive database seeding script (2000 trades, 100 positions, 500 notifications, 100 backtests)
- Fixed Backtesting page errors (total_return_pct handling)
- Added null safety checks across all frontend pages
- All endpoints now use PostgreSQL database
- Updated .gitignore for Python artifacts
- Updated documentation

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,22 @@ pnpm-debug.log*
 # Coverage / test output
 coverage/
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+ENV/
+env/
+*.egg-info/
+dist/
+*.egg
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
