--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,18 @@ alembic==1.13.2
 python-dotenv==1.0.1
 pytest==8.3.3
 psycopg2-binary==2.9.10
+
+# ML/RL dependencies
+pandas>=2.0.0
+numpy>=1.24.0
+gymnasium>=0.29.0
+stable-baselines3>=2.2.0
+torch>=2.0.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+
+# Exchange and trading dependencies
+ccxt>=4.0.0
+websockets>=12.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
